testdata/container/crasher/59b18aa28b8bf6a35f7f850ecf50f3697e67295d-bf21a9e8fbc5a3846fb05b4fa0859e0917b2202f.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x28 pc=0x4f1cdb]

goroutine 1 [running]:
github.com/aabizri/gonavitia/types.FuzzPlaceCountainer(0x7fa709ccf000, 0x2, 0x200000, 0x3)
	/tmp/go-fuzz-build662575377/gopath/src/github.com/aabizri/gonavitia/types/place_fuzz.go:22 +0x18b
go-fuzz-dep.Main(0x53b308)
	/tmp/go-fuzz-build662575377/goroot/src/go-fuzz-dep/main.go:49 +0xde
main.main()
	/tmp/go-fuzz-build662575377/gopath/src/github.com/aabizri/gonavitia/types/go.fuzz.main/main.go:10 +0x2d
exit status 2